# smart_robot_ai_perception

./: README.md  package.xml  requirements.txt  setup.py
config/: params.yaml
resource/: smart_robot_ai_perception
smart_robot_ai_perception/launch/: sim_perception.launch.py
smart_robot_ai_perception/nodes/: controller_node.py  detector_node.py  fusion_node.py  lidar_node.py
smart_robot_ai_perception/utils/: fake_detector.py  pid.py  yolov8_detector.py
